Switched to coderay for code highlighting; still have that weird whitespace issue thing.

--- a/public/ruby.css
+++ b/public/ruby.css
@@ -1,32 +1,34 @@
-pre {
-    background-color: #f1f1f3;
-    color: #112;
-    padding: 5px;
-    font-family:"bitstream vera sans mono",monaco,"lucida console","courier new",courier,serif;
-    font-size: 110%;
-    overflow: auto;
-    margin: 4px 0px;
-    width: 95%;
+.CodeRay {
+  background-color: #232323;
+  border: 1px solid black;
+  font-family: 'Courier New', 'Terminal', monospace;
+  color: #E6E0DB;
+  padding: 3px 5px;
+  overflow: auto;
+  font-size: 12px;
+  margin: 12px 0;
 }
 
+.CodeRay pre {
+  margin:	0px;
+  padding: 0px;
+}
 
-/* Syntax highlighting */
-pre .normal {}
-pre .comment { color: #005; font-style: italic; }
-pre .keyword { color: #A00; font-weight: bold; }
-pre .method { color: #077; }
-pre .class { color: #074; }
-pre .module { color: #050; }
-pre .punct { color: #447; font-weight: bold; }
-pre .symbol { color: #099; }
-pre .string { color: #944; background: #FFE; }
-pre .char { color: #F07; }
-pre .ident { color: #004; }
-pre .constant { color: #07F; }
-pre .regex { color: #B66; background: #FEF; }
-pre .number { color: #F99; }
-pre .attribute { color: #5bb; }
-pre .global { color: #7FB; }
-pre .expr { color: #227; }
-pre .escape { color: #277; }
-
+.CodeRay .an { color:#E7BE69 }                      /* html attribute */
+.CodeRay .c  { color:#BC9358; font-style: italic; } /* comment */
+.CodeRay .ch { color:#509E4F }                      /* escaped character */
+.CodeRay .cl { color:#FFF }                         /* class */
+.CodeRay .co { color:#FFF }                         /* constant */
+.CodeRay .fl { color:#A4C260 }                      /* float */
+.CodeRay .fu { color:#FFC56D }                      /* function */
+.CodeRay .gv { color:#D0CFFE }                      /* global variable */
+.CodeRay .i  { color:#A4C260 }                      /* integer */
+.CodeRay .il { background:#151515 }                 /* inline code */
+.CodeRay .iv { color:#D0CFFE }                      /* instance variable */
+.CodeRay .pp { color:#E7BE69 }                      /* doctype */
+.CodeRay .r  { color:#CB7832 }                      /* keyword */
+.CodeRay .rx { color:#A4C260 }                      /* regex */
+.CodeRay .s  { color:#A4C260 }                      /* string */
+.CodeRay .sy { color:#6C9CBD }                      /* symbol */
+.CodeRay .ta { color:#E7BE69 }                      /* html tag */
+.CodeRay .pc { color:#6C9CBD }                      /* boolean */
